--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <span id="player-health"></span>
         <span id="player-attack"></span>
       </div>
+      <div id="player-history">
+      </div>
     </div>
     <script defer type="module" src="/src/main.ts"></script>
   </body>
