game loop refactor

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </div>
       <div id="player-history">
       </div>
+      <button id="reset-game" type="button">Restart Game</button>
     </div>
     <script defer type="module" src="/src/main.ts"></script>
   </body>
