Fix HP overflow bug. Fix XP overflow bug

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div id="game">
       <canvas width="400" height="400" id="dungeon-crawler"></canvas>
         <div id="player-stats">
+          <span id="player-level"></span>
           <span id="player-health"></span>
-          <span id="player-attack"></span>
+          <span id="player-experience"></span>
         </div>
       <div id="player-history">
       </div>
