--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
     <div id="game">
-      <img style="display: none;" id="potion" height="40" width="40" src="/potion.png"/>
-      <img style="display: none;" id="pickachu" height="40" width="40" src="/pickachu.png"/>
-      <img style="display: none;" id="rattata" height="40" width="40" src="/rattata.png"/>
-      <img style="display: none;" id="grass" height="40" width="40" src="/grass.jpeg"/>
-      <img style="display: none;" id="tm" height="40" width="40" src="/tm.png"/>
-      <canvas width="400" height="400" id="dungeon-crawler"></canvas>
+      <img style="display: none;" id="potion" height="25" width="25" src="/potion.png"/>
+      <img style="display: none;" id="pickachu" height="25" width="25" src="/pickachu.png"/>
+      <img style="display: none;" id="rattata" height="25" width="25" src="/rattata.png"/>
+      <img style="display: none;" id="grass" height="25" width="25" src="/grass.jpeg"/>
+      <img style="display: none;" id="tm" height="25" width="25" src="/tm.png"/>
+      <img style="display: none;" id="stone" height="25" width="25" src="/stone.png"/>
+      <canvas width="500" height="500" id="dungeon-crawler"></canvas>
         <div id="player-stats">
           <span id="player-level"></span>
           <span id="player-health"></span>
