place x attacks on board

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <img style="display: none;" id="grass" height="25" width="25" src="/grass.jpeg"/>
       <img style="display: none;" id="tm" height="25" width="25" src="/tm.png"/>
       <img style="display: none;" id="stone" height="25" width="25" src="/stone.png"/>
+      <img style="display: none;" id="xattack" height="25" width="25" src="/xattack.png"/>
       <div id="player-stats">
         <span id="player-level"></span>
 
