--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <img style="display: none;" id="tm" height="20" width="20" src="/tm.png"/>
       <img style="display: none;" id="stone" height="20" width="20" src="/stone.png"/>
       <img style="display: none;" id="xattack" height="20" width="20" src="/xattack.png"/>
+      <img style="display: none;" id="gengar" height="20" width="20" src="/gengar.png"/>
       <div id="player-stats">
         <span id="player-level"></span>
 
