add game over modal

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       <img style="display: none;" id="stone" height="20" width="20" src="/stone.png"/>
       <img style="display: none;" id="xattack" height="20" width="20" src="/xattack.png"/>
       <img style="display: none;" id="gengar" height="20" width="20" src="/gengar.png"/>
+
+      <div id="modal">
+        <div id="modal-content"></div>
+        <button id="modal-button" class="green">Start Game</button>
+      </div>
+
       <div id="player-stats">
         <span id="player-level"></span>
 
@@ -39,7 +45,7 @@
        
       <div id="player-history">
       </div>
-      <button id="reset-game" type="button">Restart Game</button>
+      <button id="reset-game" type="button" class="green">Restart Game</button>
     </div>
     <script defer type="module" src="/src/main.ts"></script>
   </body>
